# instance_stixels

./: .gitignore  CMakeLists.txt  README.md  instance_stixel_env.yml  package.xml  run.py  singularity_recipe
GPUStixels/: CMakeLists.txt  Cityscapes.h  RoadEstimation.cu  RoadEstimation.h  RoadEstimationKernels.cu  Segmentation.cpp  Segmentation.h  Stixels.cu  Stixels.hpp  StixelsKernels.cu  StixelsKernels.h  configuration.h  main.cu  util.h
GPUStixels/tests/: generate_testdata.py  main.cpp  segmentation_tests.cpp  stixelskernels_tests.cu
InstanceStixels/: .gitignore
InstanceStixels/include/InstanceStixels/: Cityscapes.h  H5Segmentation.h  RoadEstimation.h  RoadEstimationKernels.h  Stixels.hpp  StixelsKernels.h  TRTOnnxCNN.hpp  configuration.h  types.h  util.h
InstanceStixels/include/InstanceStixels/TRTUtils/: buffers.h  common.h  half.h  logging.h  parserOnnxConfig.h
InstanceStixels/src/: H5Segmentation.cpp  RoadEstimation.cu  RoadEstimationKernels.cu  Stixels.cu  StixelsKernels.cu  TRTOnnxCNN.cpp
InstanceStixels/tests/: generate_testdata.py  main.cpp  segmentation_tests.cpp  stixelskernels_tests.cu
apps/: run_cityscapes.cu  stixels_node.cu  stixels_node.h  stixels_node_main.cu  stixels_wrapper.cu  stixels_wrapper.h  visualization_node.cpp  visualization_node.h  visualization_node_main.cpp
cfg/: InstanceStixels.cfg  InstanceStixelsVisualization.cfg  drn_d_22_pairwise_cfg.yaml  drn_d_22_unary_cfg.yaml  drn_d_38_pairwise_cfg.yaml  drn_d_38_unary_cfg.yaml
clustering_visualization/: cityscapes_instance_loader.py  clustering_visualization.py
evaluation/: instance_eval.py  run_instanceevaluation.sh  run_semanticevaluation.sh
instanceoffset/: inference.py  run_segmentation.sh  train.py  utils.py  visualization.py
instanceoffset/datasets/: cityscapes.py  directory.py  transforms.py
instanceoffset/models/: DRNDownsampled.py
launch/: instance_stixels.launch
tests/: run_test.sh  short_test_files.txt
tools/: instance_stixel_env.yml  run_cityscapes.py  run_eval.sh  run_validation_eval.sh  test_instance.sh
tools/CNN_training/: inference.py  losses.py  run_segmentation.sh  train.py  utils.py  visualization.py
tools/CNN_training/datasets/: __init__.py  cityscapes.py  directory.py  transforms.py
tools/CNN_training/models/: DRNDownsampled.py  DRNSeg.py  __init__.py  drn.py  wrappers.py
tools/evaluation/: disparity.py  run_instanceevaluation.sh  run_semanticevaluation.sh  segmentation.py
tools/visualization/: clustering_visualization.py  draw_legend.py  normalize_disparities.py  run_stixelvisualization.sh
